# claude-telegram

./: .mcp.json  Cargo.toml  flake.nix  pyproject.toml
.claude/: CLAUDE.md
bot/: claude_session.py  config.py  main.py
docs/plans/: 2026-03-03-matrix-agent-platform-design.md  2026-03-03-matrix-agent-platform.md  2026-03-07-job-raw-dimensions-design.md  2026-03-07-job-raw-dimensions-impl.md
src/: config.rs  lib.rs  main.rs
src/agent/: tool.rs
src/matrix/: client.rs  control.rs  handler.rs  mod.rs  sender.rs
src/observability/: logging.rs  metrics.rs  mod.rs  tracing_sw.rs
src/sandbox/: bwrap.rs
src/secrets/: mcp_server.rs  mod.rs  stdio_server.rs  vault.rs
src/session/: claude.rs  manager.rs  mod.rs
src/temporal/: activities.rs  client.rs  mod.rs  worker.rs  workflow.rs
tests/: config_test.rs  control_test.rs  handler_test.rs  manager_test.rs  matrix_test.rs  sender_test.rs  session_test.rs  test_claude_session.py  test_config.py  test_main_handlers.py
