[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claude-telegram"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "python-telegram-bot==21.*",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-mock"]
